<resources>
    <string name="app_name">Pretty City</string>
    <string name="app_name2">PrettyCity</string>
    <string name="nav_header_title">Pretty City</string>
    <string name="map_key">AIzaSyBGG70AxzomOdKVVyfpn-_2dwHbM71vHR8</string>

    <string name="nav_header_subtitle">Make your city prettier</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_task">Add Task</string>
    <string name="show_my_location">Show My Location</string>
    <string name="fullscreen_image">Image</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tasklist">Tasklist</string>
    <string name="menu_tasklist_done">Done Tasklist</string>
    <string name="menu_map">Map</string>
    <string name="complete">Complete</string>
    <string name="change_after_photo">Change after photo</string>
    <string name="task_name">Task name</string>
    <string name="date_done_empty">Done date (yyyy-MM-dd)</string>
    <string name="date_done">Done date </string>
    <string name="make_route">Make route</string>
    <string name="set_in_progress">In progress</string>
    <string name="edit_coord">Edit Coordinates on Map</string>
    <string name="set_done">Mark as Completed</string>
    <string name="status">Status: </string>


    <string name="toast_no_exif">Cannot read EXIF</string>
    <string name="toast_enter_title">Enter task name</string>
    <string name="toast_task_added">Task added</string>
    <string name="toast_saving">Saving…</string>

    <string name="open_camera">Make photo</string>
    <string name="open_gallery">Choose from gallery</string>
    <string name="add_photo">Add photo</string>

    <string-array name="priority_keys">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="priority_values">
        <item>Immediately</item>
        <item>High priority</item>
        <item>Average priority</item>
        <item>Low priority</item>
    </string-array>

    <string-array name="status_array">
        <item>planned</item>
        <item>progress</item>
        <item>done</item>
    </string-array>
</resources>